--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,46 @@
-html,
-body,
-#root {
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@layer base {
+  @font-face {
+    font-family: 'Dank Mono';
+    src: url("./fonts/dankmono.woff") format('woff');
+  }
+
+  @font-face {
+    font-family: 'Dank Mono Italic';
+    src: url("./fonts/dankmono-italic.woff") format('woff');
+  }
+
+  html, body {
+    @apply font-sans;
+  }
+
+  code, samp, pre {
+    @apply font-mono;
+  }
+}
+
+@layer components {
+  .header {
+    @apply fixed w-full top-0 left-0 py-2.5;
+  }
+
+  .header-white {
+    @apply bg-white text-dark;
+  }
+
+  .header-backdrop {
+    @apply bg-white-600 filter backdrop-blur-md;
+  }
+
+  .header-navbar {
+    @apply flex items-center justify-between;
+  }
+}
+
+#main-three {
   width: 100%;
   height: 100vh;
   margin: 0;
